k8s/k8sproj/flask-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flaskapi
  template:
    metadata:
      labels:
        app: flaskapi
    spec:
      containers:
      - name: flaskapi
        image: k8sproj-flaskapi:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapi
spec:
  selector:
    app: flaskapi
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
