k8s/k8sproj/streamlit-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlitfront
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streamlitfront
  template:
    metadata:
      labels:
        app: streamlitfront
    spec:
      containers:
      - name: streamlitfront
        image: k8sproj-streamlit:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: streamlitfront
spec:
  selector:
    app: streamlitfront
  ports:
  - protocol: TCP
    port: 8501
    targetPort: 8501
  type: ClusterIP
